//SPDX-FileCopyrightText: Copyright (c) 2025 NVIDIA CORPORATION. All rights reserved.

//Licensed under the Apache License, Version 2.0 (the "License");
//you may not use this file except in compliance with the License.
//You may obtain a copy of the License at

//http://www.apache.org/licenses/LICENSE-2.0

//Unless required by applicable law or agreed to in writing, software
//distributed under the License is distributed on an "AS IS" BASIS,
//WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
//See the License for the specific language governing permissions and
//limitations under the License.

//SPDX-License-Identifier: Apache-2.0

syntax = "proto3";

package router.v1;

option go_package = "go.corp.nvidia.com/osmo/proto/router/v1;routerv1";

// Common message types for router operations

// Protocol types for port forwarding
enum Protocol {
  PROTOCOL_UNSPECIFIED = 0;
  PROTOCOL_TCP = 1;
  PROTOCOL_UDP = 2;
}

// Operation types for error reporting
enum OperationType {
  OPERATION_UNSPECIFIED = 0;
  OPERATION_EXEC = 1;
  OPERATION_PORT_FORWARD = 2;
  OPERATION_RSYNC = 3;
}

// Exec operation messages
message ExecRequest {
  oneof message {
    ExecInit init = 1;
    ExecData data = 2;
    ExecResize resize = 3;
    ExecClose close = 4;
  }
}

message ExecInit {
  string session_key = 1;    // Unique session identifier
  string cookie = 2;         // Sticky session cookie
  string workflow_id = 3;    // Workflow identifier
}

message ExecData {
  bytes payload = 1;         // Terminal input/output data
  uint64 seq = 2;            // Sequence number for ordering
}

message ExecResize {
  uint32 rows = 1;           // Terminal rows
  uint32 cols = 2;           // Terminal columns
}

message ExecClose {
  int32 exit_code = 1;       // Process exit code (optional)
}

message ExecResponse {
  oneof message {
    ExecInit init = 1;            // For agent registration
    ExecData data = 2;
    ExecError error = 3;
    ExecClose close = 4;
  }
}

message ExecError {
  string message = 1;
  string code = 2;           // gRPC status code string
}

// Port-forward operation messages
message PortForwardRequest {
  oneof message {
    PortForwardInit init = 1;
    PortForwardData data = 2;
    PortForwardClose close = 3;
  }
}

message PortForwardInit {
  string session_key = 1;
  string cookie = 2;
  string workflow_id = 3;
  Protocol protocol = 4;     // TCP or UDP
  int32 remote_port = 5;     // Port on remote task
}

message PortForwardData {
  bytes payload = 1;
  uint64 seq = 2;
  // For UDP: payload contains length-prefixed datagram
  // Format: [4-byte big-endian length][datagram data]
}

message PortForwardClose {
  string reason = 1;
}

message PortForwardResponse {
  oneof message {
    PortForwardInit init = 1;     // For agent registration
    PortForwardData data = 2;
    PortForwardError error = 3;
    PortForwardClose close = 4;
  }
}

message PortForwardError {
  string message = 1;
  string code = 2;
}

// Rsync operation messages
message RsyncRequest {
  oneof message {
    RsyncInit init = 1;
    RsyncData data = 2;
    RsyncClose close = 3;
  }
}

message RsyncInit {
  string session_key = 1;
  string cookie = 2;
  string workflow_id = 3;
  string direction = 4;      // "upload" or "download"
}

message RsyncData {
  bytes payload = 1;
  uint64 seq = 2;
}

message RsyncClose {
  bool success = 1;
  string error_message = 2;
}

message RsyncResponse {
  oneof message {
    RsyncInit init = 1;           // For agent registration
    RsyncData data = 2;
    RsyncError error = 3;
    RsyncClose close = 4;
  }
}

message RsyncError {
  string message = 1;
  string code = 2;
}

// Registration messages for agent-side connections
message ExecRegistration {
  string session_key = 1;
  string cookie = 2;
  string workflow_id = 3;
}

message PortForwardRegistration {
  string session_key = 1;
  string cookie = 2;
  string workflow_id = 3;
  Protocol protocol = 4;
  int32 task_port = 5;
}

message RsyncRegistration {
  string session_key = 1;
  string cookie = 2;
  string workflow_id = 3;
}

// Control service messages
message RefreshTokenRequest {
  string current_token = 1;
  string workflow_id = 2;
}

message RefreshTokenResponse {
  string new_token = 1;
  int64 expires_at = 2;      // Unix timestamp
}

message SessionInfoRequest {
  string session_key = 1;
}

message SessionInfoResponse {
  bool active = 1;
  string workflow_id = 2;
  int64 created_at = 3;
  int64 last_activity = 4;
  OperationType operation_type = 5;
}
